@@ -6,6 +6,7 @@ Bug Fixes :
 
 * Fixed build issue that prevented saved options files from being used
 * Fixed build issue that gave the test renderman display driver the wrong file suffix on mac
+* Bound many missing canRead() functions for the Reader subclasses, and added a test case to make sure all future bindings will include them.
 
 Cortex 6.4.1
 ============
